commit add servlet for meal

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,3 +1,4 @@
+
 <html>
 <head>
     <meta charset="UTF-8">
@@ -8,6 +9,8 @@
 <hr>
 <ul>
     <li><a href="users">Users</a></li>
+    <li><a href="meals">Meals</a></li>
+
 </ul>
 </body>
 </html>
