--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -6,7 +6,13 @@
 <body>
 <h3>Проект <a href="https://github.com/JavaWebinar/topjava" target="_blank">Java Enterprise (Topjava)</a></h3>
 <hr>
+
 <ul>
+    <form method="post" action="users">
+        <input type="radio" name="userId" value="1">USER<Br>
+        <input type="radio" name="userId" value="2">USER2</p>
+        <p><input type="submit" value="Enter"></p>
+    </form>
     <li><a href="users">Users</a></li>
     <li><a href="meals">Meals</a></li>
 </ul>
